ENH/RF: enhance GithubBot with knowledge about branches, and use that

--- a/master.cfg
+++ b/master.cfg
@@ -170,6 +170,7 @@ class GithubBot(object):
                  build_timeout=None,
                  test_env=None,
                  test_dir=None,
+                 branches=["master"],
                  ):
         # using easy_install on packages that are already in
         # system-site-packages causes the system path to get promoted above the
@@ -193,12 +194,15 @@ class GithubBot(object):
             download_dir = '%s-dist' % repo
         self.download_dir = download_dir
         self.build_timeout = build_timeout
+        self.branches = branches
 
     @property
     def project(self):
         return "%s" % (self.repo,)
 
-    def poller(self, branches=["master"], interval=300):
+    def poller(self, branches=None, interval=300):
+        if branches is None:
+            branches = self.branches
         return GitPoller(
             self.git_url,
             project=self.project,
@@ -306,13 +310,15 @@ class GithubBot(object):
                             python=None,
                             easy_depends=None,
                             pip_depends=None,
-                            pre_build_cmds=()):
+                            pre_build_cmds=(),
+                            branch=None):
         if easy_depends is None:
             easy_depends = self.easy_depends
         if pip_depends is None:
             pip_depends = self.pip_depends
         factory = BuildFactory()
-        factory.addStep(Git(repourl=self.git_url, mode='full', retry=(15, 5)))
+        git_kwargs = {'branch': branch} if branch is not None else {}
+        factory.addStep(Git(repourl=self.git_url, mode='full', retry=(15, 5), **git_kwargs))
         # Make virtualenv, return environment, workdir of venv
         my_env, workdir = self._make_virtualenv(factory, python)
         # Any pre-building commands
@@ -341,7 +347,8 @@ class GithubBot(object):
                 test_env=None,
                 test_dir=None,
                 install_cmd=('python', 'setup.py', 'install'),
-                install_wd=None
+                install_wd=None,
+                branch=None,
         ):
         if test_cmd is None:
             test_cmd = self.test_cmd
@@ -350,7 +357,7 @@ class GithubBot(object):
         if test_dir is None:
             test_dir = self.test_dir
         factory, env, workdir, build_workdir = self._code_build_factory(
-            python, easy_depends, pip_depends, pre_build_cmds)
+            python, easy_depends, pip_depends, pre_build_cmds, branch=branch)
         # Additional options for ShellCommands, if provided.  To not
         # rely on knowing internal logic (either handles None as the
         # default value), we explicitly construct a dictionary only
@@ -377,6 +384,9 @@ class GithubBot(object):
            test_dir = test_dir % test_dir_env
         else:
             test_dir = workdir
+        if isinstance(test_cmd, dict):
+            # must be mapping branches to test_cmd
+            test_cmd = test_cmd[branch]
         factory.addStep(ShellCommand(command=test_cmd,
             env=env, workdir=test_dir, **kwargs))
         for cmd in post_cmds:
@@ -497,12 +507,18 @@ class GithubBot(object):
                        pre_build_cmds=(),
                        post_cmds=(),
                        install_cmd=('python', 'setup.py', 'install'),
-                       install_wd=None
+                       install_wd=None,
+                       branches=None,
                        ):
-        factory = self.factory(test_cmd, python, easy_depends, pip_depends,
-                               pre_build_cmds=pre_build_cmds, post_cmds=post_cmds,
-                               install_cmd=install_cmd, install_wd=install_wd)
-        return self._factory_builders(factory, name_slavenames)
+        if branches is None:
+            branches = self.branches
+        return sum([
+            self._factory_builders(
+                self.factory(test_cmd, python, easy_depends, pip_depends,
+                             pre_build_cmds=pre_build_cmds, post_cmds=post_cmds,
+                             install_cmd=install_cmd, install_wd=install_wd, branch=branch),
+                name_slavenames)
+            for branch in branches], [])
 
     def _factory_builders(self, factory, name_slavenames):
         builders = []
@@ -623,11 +639,15 @@ sklearn_bot = GithubBot('scikit-learn', 'scikit-learn',
     built_doc_src = "doc/build",
     easy_depends = ('nose',),
 )
-# Fail2Ban bot
+# Fail2Ban bots -- need separate ones for different branches because
+# tests are invoked differently across them
 fail2ban_bot = GithubBot('fail2ban', 'fail2ban',
-    test_cmd = shlex.split('./fail2ban-testcases'),
+    test_cmd = {'master': shlex.split('bin/fail2ban-testcases'),
+                '0.8': shlex.split('fail2ban-testcases')},
+    branches = ['master', '0.8'],
     test_dir = './build/',
 )
+
 # Sympy
 sympy_bot = GithubBot('sympy', 'sympy',
     test_cmd = ['python', '-c',
@@ -811,8 +831,7 @@ c['schedulers'] = [
                         'fail2ban-py2.6-arm',
                         # needs more fixing
                         # 'fail2ban-py2.7-win7',
-                        ],
-                        branches=['master', '0.8']),
+                        ]),
     sklearn_bot.scheduler([
                         'sklearn-py2.x-sid-sparc',
                         # not yet
