BF: Builders for setups with multiple branches must have unique names

--- a/master.cfg
+++ b/master.cfg
@@ -149,6 +149,9 @@ c['slaves'] = slaves
 # --master option)
 c['slavePortnum'] = 9989
 
+def sanitize_branch_name(name):
+    return name.replace('/', '+')
+
 # Helper functions and constants
 class GithubBot(object):
     """ Class to make buildbot stuff based round a github repo
@@ -207,13 +210,19 @@ class GithubBot(object):
             self.git_url,
             project=self.project,
             category=self.project,
-            workdir = "%s-%s-%s" % (self.organization, self.repo, '_'.join(branches).replace('/', '+')),
+            workdir = "%s-%s-%s" % (self.organization, self.repo, sanitize_branch_name('_'.join(branches))),
             branches=branches,
             pollinterval=interval)
 
     def scheduler(self, buildernames, branches=None):
         if isinstance(buildernames, basestring):
             buildernames = [buildernames]
+        if branches is None:
+            branches = self.branches
+        if len(branches) > 1:             # each branch must have its own builder
+            buildernames = ['%s_%s' % (n, b)
+                            for n in buildernames
+                            for b in branches]
         name = self.project
         if branches is not None:
             cf_kwargs = {'branch_fn': lambda branch: branch in branches}
@@ -517,14 +526,17 @@ class GithubBot(object):
                 self.factory(test_cmd, python, easy_depends, pip_depends,
                              pre_build_cmds=pre_build_cmds, post_cmds=post_cmds,
                              install_cmd=install_cmd, install_wd=install_wd, branch=branch),
-                name_slavenames)
+                name_slavenames,
+                branch if len(branches)>1 else None)
             for branch in branches], [])
 
-    def _factory_builders(self, factory, name_slavenames):
+    def _factory_builders(self, factory, name_slavenames, branch=None):
         builders = []
         for name, slavelist in name_slavenames:
             if isinstance(slavelist, basestring):
                 slavelist = [slavelist]
+            if branch is not None:
+                name='%s_%s' % (name, sanitize_branch_name(branch))
             builders.append(BuilderConfig(
                 name=name,
                 slavenames=slavelist,
