BF: no need to specify again branches while defining the poller

--- a/master.cfg
+++ b/master.cfg
@@ -702,9 +702,8 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                sklearn_bot,
                                                sympy_bot,
                                                numpy_bot,
+                                               fail2ban_bot,
                                                )]
-# Additional branches
-c['change_source'] += [fail2ban_bot.poller(branches=['master', '0.8'])]
 
 # pandas is too expensive to test and overwhelmes the sparc box, so
 # let's pull it much less frequently until figuring out how to
