BF: doh -- run from current directory

--- a/master.cfg
+++ b/master.cfg
@@ -655,7 +655,7 @@ sklearn_bot = GithubBot('scikit-learn', 'scikit-learn',
 # tests are invoked differently across them
 fail2ban_bot = GithubBot('fail2ban', 'fail2ban',
     test_cmd = {'master': shlex.split('bin/fail2ban-testcases'),
-                '0.8': shlex.split('fail2ban-testcases')},
+                '0.8': shlex.split('./fail2ban-testcases')},
     branches = ['master', '0.8'],
     test_dir = './build/',
 )
