ENH: make install_pip an option and do not install unless there are _depends + First unittests

--- a/master.cfg
+++ b/master.cfg
@@ -280,7 +280,7 @@ class GithubBot(object):
             factory.addStep(ShellCommand(command=cmd + list(pkg_spec),
                         env=env))
 
-    def _make_virtualenv(self, factory, python=None):
+    def _make_virtualenv(self, factory, python=None, install_pip=True):
         # Obviously requires virtualenv on the slave
         venv_params = ['--distribute', '--system-site-packages', 'venv']
         if not python is None:
@@ -298,11 +298,12 @@ class GithubBot(object):
         # Set env, with virtualenv in front of the path
         env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
         workdir = Interpolate("%(prop:venv_dir)s")
-        # Upgrade setuptools and pip if necessary for wheel installs
-        # Can't install pip with pip because it can't delete itself
-        factory.addStep(ShellCommand(
-            command=['easy_install', '-U', 'pip>=1.4'],
-            env=env))
+        if install_pip:
+            # Upgrade setuptools and pip if necessary for wheel installs
+            # Can't install pip with pip because it can't delete itself
+            factory.addStep(ShellCommand(
+                command=['easy_install', '-U', 'pip>=1.4'],
+                env=env))
         # Can't install easy_install with easy_install because it can't delete
         # itself.  Use the bootstrap script to avoid version conflict problems
         # from setuptools' nuclear path behavior.
@@ -310,9 +311,10 @@ class GithubBot(object):
             command = ['python', 'bs_tools.py', 'get-url',
             'https://bitbucket.org/pypa/setuptools/raw/bootstrap/ez_setup.py',
             'ez_setup.py']))
-        factory.addStep(ShellCommand(
-            command=['python', 'ez_setup.py'],
-            env=env))
+        if install_pip:
+            factory.addStep(ShellCommand(
+                command=['python', 'ez_setup.py'],
+                env=env))
         return env, workdir
 
     def _code_build_factory(self,
@@ -320,7 +322,8 @@ class GithubBot(object):
                             easy_depends=None,
                             pip_depends=None,
                             pre_build_cmds=(),
-                            branch=None):
+                            branch=None,
+                            install_pip=None):
         if easy_depends is None:
             easy_depends = self.easy_depends
         if pip_depends is None:
@@ -329,7 +332,9 @@ class GithubBot(object):
         git_kwargs = {'branch': branch} if branch is not None else {}
         factory.addStep(Git(repourl=self.git_url, mode='full', retry=(15, 5), **git_kwargs))
         # Make virtualenv, return environment, workdir of venv
-        my_env, workdir = self._make_virtualenv(factory, python)
+        my_env, workdir = self._make_virtualenv(
+            factory, python,
+            install_pip=bool(install_pip or easy_depends or pip_depends))
         # Any pre-building commands
         for cmd in pre_build_cmds:
             factory.addStep(ShellCommand(command=cmd))
@@ -413,7 +418,7 @@ class GithubBot(object):
         if test_cmd is None:
             test_cmd = self.test_cmd
         factory, env, workdir, build_workdir = self._code_build_factory(
-            python, easy_depends, pip_depends, pre_build_cmds)
+            python, easy_depends, pip_depends, pre_build_cmds, install_pip=True)
         # Build binary format(s)
         if python is None: # Use virtualenv python
             my_python = 'python'
@@ -836,7 +841,7 @@ c['schedulers'] = [
                         #'fail2ban-py3.x-wheezy-sparc',
                         'fail2ban-py2.7-osx-10.6',
                         'fail2ban-py2.7-osx-10.8',
-                        'fail2ban-py2.6-osx-10.5-ppc',
+                        'fail2ban-py2.5-osx-10.5-ppc',
                         'fail2ban-py2.6-osx-10.5-intel',
                         'fail2ban-py2.7-ppc',
                         'fail2ban-py2.6-arm',
@@ -1525,7 +1530,7 @@ c['builders'] += fail2ban_bot.build_builders(
      ('fail2ban-py2.7-wheezy-sparc', sparc_slaves_wheezy),
      ('fail2ban-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('fail2ban-py2.7-osx-10.8', osx_mountainlion_slaves),
-     ('fail2ban-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('fail2ban-py2.5-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('fail2ban-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('fail2ban-py2.7-ppc', debian_ppc_slaves),
      ('fail2ban-py2.6-arm', arm_slaves),
@@ -1628,3 +1633,31 @@ from twisted.web.static import File
 webdir = File("public_html")
 webdir.contentTypes['.egg'] = 'application/octet-stream'
 webdir.contentTypes['.whl'] = 'application/octet-stream'
+
+def _select_builders(builders, prefix):
+    return [b for b in builders
+            if b.name.startswith(prefix)]
+
+def _test_easy_and_no_easy(c, prefix, command, expect=True):
+    for builder in _select_builders(c['builders'], prefix):
+        # 2nd one is virtualenv always
+        assert(builder.factory.steps[1].kwargs['command'][0] == 'virtualenv')
+        for step in builder.factory.steps:
+            if command in step.kwargs.get('command', []):
+                if expect:
+                    return
+                else:
+                    raise AssertionError(
+                        "%s builders should not invoke %s."
+                        " Got builder %s running command %s"
+                        % (prefix, command, builder.name,
+                            ' '.join(step.kwargs.get('command'))))
+    if expect:
+        raise AssertionError(
+            "None of the %s builders invoked expected %s" % (prefix, command))
+
+def test_easy_and_no_easy(c):
+    _test_easy_and_no_easy(c, 'fail2ban-', expect=False, command='easy_install')
+    _test_easy_and_no_easy(c, 'nipy-', expect=True, command='easy_install')
+test_easy_and_no_easy(c)
+
