BF/RF: create SingleBranchSchedulers per each branch linking them to specific builders
Is done with the hope that changes in a branch will be sent only to the corresponding
buildslaves, and not all of them for that project

--- a/master.cfg
+++ b/master.cfg
@@ -28,8 +28,9 @@ Scheduler must decide if it wants to react to a Change.  It generally does this
 by filtering changes to select changes it will act on.
 
 We use SingleBranchSchedulers for this.  These obviously respond only to
-changes in one branch of a repository.  If .scheduler() provided with multiple
-branches, AnyBranchScheduler is used.
+changes in one branch of a repository. .schedulers() outputs list of
+SingleBranchSchedulers with each linked to builders corresponding to each
+branch if there are more than one.
 
 A BuildSet is the association of (information about what changes need to be
 tested) and (Builders on which to test)
@@ -152,6 +153,12 @@ c['slavePortnum'] = 9989
 def sanitize_branch_name(name):
     return name.replace('/', '+')
 
+def get_branch_builder_name(builder, branches, branch=None):
+    if branch is None or len(branches) < 2:
+        return builder
+    else:
+        return '%s_%s' % (builder, sanitize_branch_name(branch))
+
 # Helper functions and constants
 class GithubBot(object):
     """ Class to make buildbot stuff based round a github repo
@@ -214,30 +221,25 @@ class GithubBot(object):
             branches=branches,
             pollinterval=interval)
 
-    def scheduler(self, buildernames, branches=None):
+    def schedulers(self, buildernames, branches=None):
         if isinstance(buildernames, basestring):
             buildernames = [buildernames]
         if branches is None:
             branches = self.branches
-        if len(branches) > 1:             # each branch must have its own builder
-            buildernames = ['%s_%s' % (n, b)
-                            for n in buildernames
-                            for b in branches]
-        name = self.project
-        if branches is not None:
-            cf_kwargs = {'branch_fn': lambda branch: branch in branches}
-            Scheduler = AnyBranchScheduler
-        else:
-            cf_kwargs = {}
-            Scheduler = SingleBranchScheduler
-        changefilter = ChangeFilter(repository=self.git_url,
-                                    project=self.project,
-                                    category=self.project,
-                                    **cf_kwargs)
-        return Scheduler(name=name,
-                         change_filter=changefilter,
-                         treeStableTimer=None,
-                         builderNames=buildernames)
+        # Create a separate scheduler per each branch linking it
+        # to correspondingly named builders
+        return [
+            SingleBranchScheduler(
+                name=get_branch_builder_name(self.project, branches, branch),
+                change_filter=ChangeFilter(
+                     repository=self.git_url,
+                     project=self.project,
+                     category=self.project,
+                     branch_fn=lambda b: b==branch),
+                treeStableTimer=None,
+                builderNames=[get_branch_builder_name(n, branches, branch)
+                              for n in buildernames])
+            for branch in branches]
 
     def nightly_scheduler(self,
                           buildernames,
@@ -541,7 +543,7 @@ class GithubBot(object):
             if isinstance(slavelist, basestring):
                 slavelist = [slavelist]
             if branch is not None:
-                name='%s_%s' % (name, sanitize_branch_name(branch))
+                name=get_branch_builder_name(name, [None, None], branch)
             builders.append(BuilderConfig(
                 name=name,
                 slavenames=slavelist,
@@ -719,8 +721,8 @@ c['change_source'] += [pandas_bot.poller(interval=18000)]
 ####### SCHEDULERS
 # Configure the Schedulers, which decide how to react to incoming changes.
 
-c['schedulers'] = [
-    nibabel_bot.scheduler(['nibabel-py2.6',
+c['schedulers'] = sum([
+    nibabel_bot.schedulers(['nibabel-py2.6',
                            'nibabel-py2.6-32',
                            'nibabel-py2.6-xp',
                            'nibabel-py2.7-win7',
@@ -740,7 +742,7 @@ c['schedulers'] = [
                            'nibabel-py2.7-pyd0.9.7',
                            'nibabel-py2.7-pyd0.9.8',
                           ]),
-    nitime_bot.scheduler(['nitime-py2.6',
+    nitime_bot.schedulers(['nitime-py2.6',
                           'nitime-py2.6-32',
                           'nitime-py2.6-xp',
                           'nitime-py2.6-arm',
@@ -751,9 +753,9 @@ c['schedulers'] = [
                           'nitime-py2.6-osx-10.5-ppc',
                           'nitime-py2.6-osx-10.5-intel',
                          ]),
-    pyarbus_bot.scheduler(['pyarbus-py2.6',
+    pyarbus_bot.schedulers(['pyarbus-py2.6',
                           ]),
-    nipy_bot.scheduler(['nipy-py2.6',
+    nipy_bot.schedulers(['nipy-py2.6',
                         'nipy-py2.6-32',
                         'nipy-py2.6-xp',
                         'nipy-py2.6-squeeze-sparc',
@@ -771,7 +773,7 @@ c['schedulers'] = [
                         'nipy-py3.3',
                         'nipy-py2.7-sym0.7.0-nib1.2.0',
                        ]),
-    dipy_bot.scheduler(['dipy-py2.6',
+    dipy_bot.schedulers(['dipy-py2.6',
                         'dipy-py2.6-32',
                         'dipy-py2.6-xp',
                         'dipy-py2.6-squeeze-sparc',
@@ -787,7 +789,7 @@ c['schedulers'] = [
                         'dipy-py3.2',
                         'dipy-py3.3',
                        ]),
-    nipype_bot.scheduler(['nipype-py2.6',
+    nipype_bot.schedulers(['nipype-py2.6',
                           'nipype-py2.6-32',
                           'nipype-py2.6-xp',
                           'nipype-py2.7-fedora',
@@ -796,7 +798,7 @@ c['schedulers'] = [
                           'nipype-py2.6-osx-10.5-ppc',
                           'nipype-py2.6-osx-10.5-intel',
                        ]),
-    regreg_bot.scheduler(['regreg-py2.6',
+    regreg_bot.schedulers(['regreg-py2.6',
                           'regreg-py2.6-32',
                           'regreg-py2.6-xp',
                           'regreg-py2.7-fedora',
@@ -806,21 +808,21 @@ c['schedulers'] = [
                           'regreg-py2.6-osx-10.5-ppc',
                           'regreg-py2.6-osx-10.5-intel',
                        ]),
-    pandas_bot.scheduler([
+    pandas_bot.schedulers([
                         'pandas-py2.x-sid-sparc',
                         'pandas-py3.x-sid-sparc',
                         'pandas-py2.6-wheezy-sparc',
                         'pandas-py2.7-wheezy-sparc',
                         'pandas-py3.x-wheezy-sparc',
                         ]),
-    statsmodels_bot.scheduler([
+    statsmodels_bot.schedulers([
                         'statsmodels-py2.x-sid-sparc',
                         # not yet
                         #'statsmodels-py3.x-sid-sparc',
                         'statsmodels-py2.7-wheezy-sparc',
                         #'statsmodels-py3.x-wheezy-sparc',
                         ]),
-    pymvpa_bot.scheduler([
+    pymvpa_bot.schedulers([
                         'pymvpa-py2.x-sid-sparc',
                         # not yet
                         #'pymvpa-py3.x-sid-sparc',
@@ -833,7 +835,7 @@ c['schedulers'] = [
                         'pymvpa-py2.6-osx-10.5-intel',
                         'pymvpa-py2.6-xp',
                         ]),
-    fail2ban_bot.scheduler([
+    fail2ban_bot.schedulers([
                         'fail2ban-py2.x-sid-sparc',
                         # whenever will add testing of 0.9
                         #'fail2ban-py3.x-sid-sparc',
@@ -848,19 +850,20 @@ c['schedulers'] = [
                         # needs more fixing
                         # 'fail2ban-py2.7-win7',
                         ]),
-    sklearn_bot.scheduler([
+    sklearn_bot.schedulers([
                         'sklearn-py2.x-sid-sparc',
                         # not yet
                         #'sklearn-py3.x-sid-sparc',
                         'sklearn-py2.6-wheezy-sparc',
                         #'sklearn-py3.x-wheezy-sparc',
                         ]),
-    numpy_bot.scheduler([
+    numpy_bot.schedulers([
                         'numpy-py2.7-osx-10.8',
                         'numpy-py3.3-osx-10.8',
                         'numpy-py3.4-osx-10.8',
                         'numpy-py2.6-osx-10.5-ppc',
-                        ]),
+                        ]),], []) + \
+    [
     # Doc builds
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
     nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
