BF: to create a function to compare against target branch we need a 'closure'
Use nested function to get an effect of closure.  Should fix builds not running
for fail2ban

--- a/master.cfg
+++ b/master.cfg
@@ -228,18 +228,24 @@ class GithubBot(object):
             branches = self.branches
         # Create a separate scheduler per each branch linking it
         # to correspondingly named builders
-        return [
-            SingleBranchScheduler(
+        schedulers = []
+        for branch in branches:
+            # we need a closure to maintain the function comparing to the
+            # actual target branch
+            def _branch_fn(b):
+                return lambda b_: b_==b
+            branch_fn = _branch_fn(branch)
+            schedulers.append(SingleBranchScheduler(
                 name=get_branch_builder_name(self.project, branches, branch),
                 change_filter=ChangeFilter(
                      repository=self.git_url,
                      project=self.project,
                      category=self.project,
-                     branch_fn=lambda b: b==branch),
+                     branch_fn=branch_fn),
                 treeStableTimer=None,
                 builderNames=[get_branch_builder_name(n, branches, branch)
-                              for n in buildernames])
-            for branch in branches]
+                              for n in buildernames]))
+        return schedulers
 
     def nightly_scheduler(self,
                           buildernames,
