ENH: for 2.5 -- need to install simplejson for fail2ban

--- a/master.cfg
+++ b/master.cfg
@@ -1539,12 +1539,15 @@ c['builders'] += fail2ban_bot.build_builders(
      ('fail2ban-py2.7-wheezy-sparc', sparc_slaves_wheezy),
      ('fail2ban-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('fail2ban-py2.7-osx-10.8', osx_mountainlion_slaves),
-     ('fail2ban-py2.5-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('fail2ban-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('fail2ban-py2.7-ppc', debian_ppc_slaves),
      ('fail2ban-py2.6-arm', arm_slaves),
      # ('fail2ban-py2.7-win7', win7_64_slaves),
     ),
+    install_cmd=None)
+c['builders'] += fail2ban_bot.build_builders(
+    (('fail2ban-py2.5-osx-10.5-ppc', osx_leopard_ppc_slaves),),
+    pip_depends=['simplejson'],
     install_cmd=None)
 # Sympy
 c['builders'] += sympy_bot.build_builders(
@@ -1643,12 +1646,14 @@ webdir = File("public_html")
 webdir.contentTypes['.egg'] = 'application/octet-stream'
 webdir.contentTypes['.whl'] = 'application/octet-stream'
 
-def _select_builders(builders, prefix):
+import re
+def _select_builders(builders, regex):
+    r = re.compile(regex)
     return [b for b in builders
-            if b.name.startswith(prefix)]
+            if r.match(b.name)]
 
-def _test_easy_and_no_easy(c, prefix, command, expect=True):
-    for builder in _select_builders(c['builders'], prefix):
+def _test_easy_and_no_easy(c, regex, command, expect=True):
+    for builder in _select_builders(c['builders'], regex):
         # 2nd one is virtualenv always
         assert(builder.factory.steps[1].kwargs['command'][0] == 'virtualenv')
         for step in builder.factory.steps:
@@ -1666,7 +1671,8 @@ def _test_easy_and_no_easy(c, prefix, command, expect=True):
             "None of the %s builders invoked expected %s" % (prefix, command))
 
 def test_easy_and_no_easy(c):
-    _test_easy_and_no_easy(c, 'fail2ban-', expect=False, command='easy_install')
-    _test_easy_and_no_easy(c, 'nipy-', expect=True, command='easy_install')
+    _test_easy_and_no_easy(c, '^fail2ban-py2.[^5].*', expect=False, command='easy_install')
+    _test_easy_and_no_easy(c, '^fail2ban-py2.5-.*', expect=True, command='easy_install')
+    _test_easy_and_no_easy(c, '^nipy-.*', expect=True, command='easy_install')
 test_easy_and_no_easy(c)
 
