BF: actually for fail2ban master we should not try 2.5 -- not supported ;-)

--- a/master.cfg
+++ b/master.cfg
@@ -153,8 +153,11 @@ c['slavePortnum'] = 9989
 def sanitize_branch_name(name):
     return name.replace('/', '+')
 
+def is_one_default_branch(branches, branch):
+    return (len(branches) < 2 and (branch in (None, 'master', 'HEAD')))
+
 def get_branch_builder_name(builder, branches, branch=None):
-    if branch is None or len(branches) < 2:
+    if branch is None or is_one_default_branch(branches, branch):
         return builder
     else:
         return '%s_%s' % (builder, sanitize_branch_name(branch))
@@ -540,7 +543,7 @@ class GithubBot(object):
                              pre_build_cmds=pre_build_cmds, post_cmds=post_cmds,
                              install_cmd=install_cmd, install_wd=install_wd, branch=branch),
                 name_slavenames,
-                branch if len(branches)>1 else None)
+                None if is_one_default_branch(branches, branch) else branch)
             for branch in branches], [])
 
     def _factory_builders(self, factory, name_slavenames, branch=None):
@@ -847,14 +850,21 @@ c['schedulers'] = sum([
                         #'fail2ban-py3.x-sid-sparc',
                         'fail2ban-py2.7-wheezy-sparc',
                         #'fail2ban-py3.x-wheezy-sparc',
-                        'fail2ban-py2.7-osx-10.6',
+                        'fail2ban-py2.6-osx-10.6',
                         'fail2ban-py2.7-osx-10.8',
-                        'fail2ban-py2.5-osx-10.5-ppc',
-                        'fail2ban-py2.6-osx-10.5-intel',
                         'fail2ban-py2.7-ppc',
                         'fail2ban-py2.6-arm',
                         # needs more fixing
                         # 'fail2ban-py2.7-win7',
+                        # do not bother at this point with
+                        # a dedicated scheduler,
+                        # since then we would need to name
+                        # this scheduler differently.
+                        # With such setup there would
+                        # just be a warning that some builders
+                        # were not found for _master in those
+                        'fail2ban-py2.5-osx-10.5-intel',
+                        'fail2ban-py2.5-osx-10.5-ppc',
                         ]),
     sklearn_bot.schedulers([
                         'sklearn-py2.x-sid-sparc',
@@ -1537,17 +1547,19 @@ c['builders'].append(
 c['builders'] += fail2ban_bot.build_builders(
     (('fail2ban-py2.x-sid-sparc', sparc_slaves_sid),
      ('fail2ban-py2.7-wheezy-sparc', sparc_slaves_wheezy),
-     ('fail2ban-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('fail2ban-py2.6-osx-10.6', osx_snowleopard_slaves),
      ('fail2ban-py2.7-osx-10.8', osx_mountainlion_slaves),
-     ('fail2ban-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('fail2ban-py2.7-ppc', debian_ppc_slaves),
      ('fail2ban-py2.6-arm', arm_slaves),
      # ('fail2ban-py2.7-win7', win7_64_slaves),
     ),
     install_cmd=None)
+# master does not support 2.5
 c['builders'] += fail2ban_bot.build_builders(
-    (('fail2ban-py2.5-osx-10.5-ppc', osx_leopard_ppc_slaves),),
-    pip_depends=['simplejson'],
+    (
+        ('fail2ban-py2.5-osx-10.5-intel', osx_leopard_intel_slaves),
+        ('fail2ban-py2.5-osx-10.5-ppc', osx_leopard_ppc_slaves),),
+    branches=['0.8'],
     install_cmd=None)
 # Sympy
 c['builders'] += sympy_bot.build_builders(
@@ -1671,8 +1683,13 @@ def _test_easy_and_no_easy(c, regex, command, expect=True):
             "None of the %s builders invoked expected %s" % (prefix, command))
 
 def test_easy_and_no_easy(c):
-    _test_easy_and_no_easy(c, '^fail2ban-py2.[^5].*', expect=False, command='easy_install')
-    _test_easy_and_no_easy(c, '^fail2ban-py2.5-.*', expect=True, command='easy_install')
+    _test_easy_and_no_easy(c, '^fail2ban-.*', expect=False, command='easy_install')
     _test_easy_and_no_easy(c, '^nipy-.*', expect=True, command='easy_install')
-test_easy_and_no_easy(c)
 
+def test_fail2ban_08_state(c):
+    builders = _select_builders(c['builders'], 'fail2ban-py2\.5-osx-10\.5-ppc.*')
+    # we should still have branch suffix since it is not master
+    assert(builders[0].name == 'fail2ban-py2.5-osx-10.5-ppc_0.8')
+
+test_easy_and_no_easy(c)
+test_fail2ban_08_state(c)
