ENH/BF: make schedulers for created builders
This makes it possible to avoid duplication of specification of builders
by removing necessity to explicitly creating schedulers for regular builds.
Testing for now only on fail2ban and pymvpa -- if everything is ok, would
adjust for the rest

--- a/master.cfg
+++ b/master.cfg
@@ -224,6 +224,22 @@ class GithubBot(object):
             branches=branches,
             pollinterval=interval)
 
+    def _get_scheduler(self, branch_buildernames, branches, branch):
+        # we need a closure to maintain the function comparing to the
+        # actual target branch
+        def _branch_fn(b):
+            return lambda b_: b_==b
+        branch_fn = _branch_fn(branch)
+        return SingleBranchScheduler(
+            name=get_branch_builder_name(self.project, branches, branch),
+            change_filter=ChangeFilter(
+                 repository=self.git_url,
+                 project=self.project,
+                 category=self.project,
+                 branch_fn=branch_fn),
+            treeStableTimer=None,
+            builderNames=branch_buildernames)
+
     def schedulers(self, buildernames, branches=None):
         if isinstance(buildernames, basestring):
             buildernames = [buildernames]
@@ -231,24 +247,11 @@ class GithubBot(object):
             branches = self.branches
         # Create a separate scheduler per each branch linking it
         # to correspondingly named builders
-        schedulers = []
-        for branch in branches:
-            # we need a closure to maintain the function comparing to the
-            # actual target branch
-            def _branch_fn(b):
-                return lambda b_: b_==b
-            branch_fn = _branch_fn(branch)
-            schedulers.append(SingleBranchScheduler(
-                name=get_branch_builder_name(self.project, branches, branch),
-                change_filter=ChangeFilter(
-                     repository=self.git_url,
-                     project=self.project,
-                     category=self.project,
-                     branch_fn=branch_fn),
-                treeStableTimer=None,
-                builderNames=[get_branch_builder_name(n, branches, branch)
-                              for n in buildernames]))
-        return schedulers
+        return [self._get_scheduler(
+                      [get_branch_builder_name(n, branches, branch)
+                       for n in buildernames],
+                      branches, branch)
+                for branch in branches]
 
     def nightly_scheduler(self,
                           buildernames,
@@ -534,17 +537,26 @@ class GithubBot(object):
                        install_cmd=('python', 'setup.py', 'install'),
                        install_wd=None,
                        branches=None,
+                       schedulers=None,   # get a new scheduler assigned per each branch
                        ):
         if branches is None:
             branches = self.branches
-        return sum([
-            self._factory_builders(
+        builders = []
+        for branch in branches:
+            branch_builders = self._factory_builders(
                 self.factory(test_cmd, python, easy_depends, pip_depends,
                              pre_build_cmds=pre_build_cmds, post_cmds=post_cmds,
                              install_cmd=install_cmd, install_wd=install_wd, branch=branch),
                 name_slavenames,
                 None if is_one_default_branch(branches, branch) else branch)
-            for branch in branches], [])
+
+            # assign those to a new unique scheduler if that was requested
+            if schedulers is not None:
+                schedulers.append(
+                    self._get_scheduler([b.name for b in branch_builders],
+                                        branches, branch))
+            builders += branch_builders
+        return builders
 
     def _factory_builders(self, factory, name_slavenames, branch=None):
         builders = []
@@ -830,41 +842,6 @@ c['schedulers'] = sum([
                         #'statsmodels-py3.x-sid-sparc',
                         'statsmodels-py2.7-wheezy-sparc',
                         #'statsmodels-py3.x-wheezy-sparc',
-                        ]),
-    pymvpa_bot.schedulers([
-                        'pymvpa-py2.x-sid-sparc',
-                        # not yet
-                        #'pymvpa-py3.x-sid-sparc',
-                        'pymvpa-py2.7-wheezy-sparc',
-                        #'pymvpa-py3.x-wheezy-sparc',
-                        'pymvpa-py2.7-osx-10.6',
-                        'pymvpa-py2.7-osx-10.7',
-                        'pymvpa-py2.7-osx-10.8',
-                        'pymvpa-py2.6-osx-10.5-ppc',
-                        'pymvpa-py2.6-osx-10.5-intel',
-                        'pymvpa-py2.6-xp',
-                        ]),
-    fail2ban_bot.schedulers([
-                        'fail2ban-py2.x-sid-sparc',
-                        # whenever will add testing of 0.9
-                        #'fail2ban-py3.x-sid-sparc',
-                        'fail2ban-py2.7-wheezy-sparc',
-                        #'fail2ban-py3.x-wheezy-sparc',
-                        'fail2ban-py2.6-osx-10.6',
-                        'fail2ban-py2.7-osx-10.8',
-                        'fail2ban-py2.7-ppc',
-                        'fail2ban-py2.6-arm',
-                        # needs more fixing
-                        # 'fail2ban-py2.7-win7',
-                        # do not bother at this point with
-                        # a dedicated scheduler,
-                        # since then we would need to name
-                        # this scheduler differently.
-                        # With such setup there would
-                        # just be a warning that some builders
-                        # were not found for _master in those
-                        'fail2ban-py2.5-osx-10.5-intel',
-                        'fail2ban-py2.5-osx-10.5-ppc',
                         ]),
     sklearn_bot.schedulers([
                         'sklearn-py2.x-sid-sparc',
@@ -1522,7 +1499,7 @@ c['builders'] += pymvpa_bot.build_builders(
      ('pymvpa-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('pymvpa-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('pymvpa-py2.6-xp', xp_32_slaves),
-    ))
+    ), schedulers=c['schedulers'])
 # Sklearn
 c['builders'] += sklearn_bot.build_builders((
     ('sklearn-py2.x-sid-sparc', sparc_slaves_sid),))
@@ -1553,6 +1530,7 @@ c['builders'] += fail2ban_bot.build_builders(
      ('fail2ban-py2.6-arm', arm_slaves),
      # ('fail2ban-py2.7-win7', win7_64_slaves),
     ),
+    schedulers=c['schedulers'],           # in-place modify
     install_cmd=None)
 # master does not support 2.5
 c['builders'] += fail2ban_bot.build_builders(
@@ -1691,5 +1669,12 @@ def test_fail2ban_08_state(c):
     # we should still have branch suffix since it is not master
     assert(builders[0].name == 'fail2ban-py2.5-osx-10.5-ppc_0.8')
 
+def test_regression(c):
+    assert(len(c['builders']) == 160)
+    assert(len(c['schedulers']) == 217)
+    #print [sc.name for sc in c['schedulers']]
+
 test_easy_and_no_easy(c)
 test_fail2ban_08_state(c)
+test_regression(c)
+
