--- a/master.cfg
+++ b/master.cfg
@@ -83,6 +83,11 @@ from buildbot.process.properties import Property, Interpolate
 from buildbot.process import properties
 from buildbot.config import BuilderConfig
 
+# Canonical URL for ez_setup
+# EZ_SETUP_URL = 'https://bitbucket.org/pypa/setuptools/raw/bootstrap/ez_setup.py'
+# Cached copy set by mb312 account crontab
+EZ_SETUP_URL = 'https://nipy.bic.berkeley.edu/scipy_installers/ez_setup.py'
+
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
@@ -296,6 +301,7 @@ class GithubBot(object):
 
     def _make_virtualenv(self, factory, python=None, install_pip=True):
         # Obviously requires virtualenv on the slave
+        factory.addStep(ShellCommand(command=['mkdir', 'mk_venv']))
         venv_params = ['--distribute', '--system-site-packages', 'venv']
         if not python is None:
             venv_params = ['--python=' + python] + venv_params
@@ -322,8 +328,7 @@ class GithubBot(object):
         # itself.  Use the bootstrap script to avoid version conflict problems
         # from setuptools' nuclear path behavior.
         factory.addStep(ShellCommand(
-            command = ['python', 'bs_tools.py', 'get-url',
-            'https://bitbucket.org/pypa/setuptools/raw/bootstrap/ez_setup.py',
+            command = ['python', 'bs_tools.py', 'get-url', EZ_SETUP_URL,
             'ez_setup.py']))
         if install_pip:
             factory.addStep(ShellCommand(
